--- a/ballotPlanner.xcodeproj/xcshareddata/xcschemes/ballotPlanner.xcscheme
+++ b/ballotPlanner.xcodeproj/xcshareddata/xcschemes/ballotPlanner.xcscheme
@@ -26,7 +26,17 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "3FEAA494237CDB550097AB6F"
+            BuildableName = "ballotPlannerParserTests.xctest"
+            BlueprintName = "ballotPlannerParserTests"
+            ReferencedContainer = "container:ballotPlanner.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
